--- a/css/page.css
+++ b/css/page.css
@@ -140,19 +140,17 @@
 
 
 /* 소식 */
-.newsPage .contentsBox section h2{margin-bottom: 80px;}
 
 
 /* 상세 */
-.detailPage .contentsBox > section h2{font-size: 32px; font-weight: 700;}
-.detailPage .contentsBox > section time{font-size: 16px; font-weight: 400; color: var(--color-font03); display: block;}
+.detailPage .contentsBox > section h2{font-weight: 700;}
+.detailPage .contentsBox > section time{line-height: 1.2; font-weight: 400; color: var(--color-font03); display: block;}
 .detailPage .contentsBox > section > time{margin-top: 20px;}
-.detailPage .contentsBox > section .contentArea{padding-block: 60px 100px; margin-top: 60px; border-width: 1px 0; border-style: solid; border-color: black transparent var(--color-line01);}
-.detailPage .contentsBox > section .contentArea img{margin-bottom: 40px;}
-.detailPage .contentsBox > section .contentArea p{font-size: 18px; line-height: 26px; font-weight: 300;}
-.detailPage .contentsBox > section .contentArea p:not(:last-of-type){margin-bottom: 26px;}
-.detailPage .contentsBox > section section{margin-top: 160px;}
-.detailPage .contentsBox > section section h3{font-size: 28px; margin-bottom: 40px; font-weight: 700;}
+.detailPage .contentsBox > section .contentArea{border-width: 1px 0; border-style: solid; border-color: black transparent var(--color-line01);}
+.detailPage .contentsBox > section .contentArea p{font-weight: 300;}
+.detailPage .contentsBox > section section h3{font-weight: 700;}
+.detailPage .contentsBox > section .boardBox{width: 100%; overflow: auto; justify-content: space-between;}
+.detailPage .contentsBox > section .boardBox li{min-width: 280px;}
 
 
 /* 문의 */
