--- a/css/page.css
+++ b/css/page.css
@@ -154,4 +154,4 @@
 
 
 /* 문의 */
-.inquiryPage .contentsBox section h2 + p{margin-bottom: 80px; color: var(--color-font02);}
+.inquiryPage .contentsBox section h2 + p{color: var(--color-font02);}
