--- a/css/global_mobile.css
+++ b/css/global_mobile.css
@@ -23,6 +23,23 @@ aside a:not(:last-of-type){border-right: 1px solid rgba(255, 255, 255, 0.3);}
 .boardBox li a time{font-size: 14px;}
 
 
+/* 페이지네이션 */
+.paginationBox{gap: 10px; margin-top: 60px;}
+.paginationBox a{width: 26px;}
+.paginationBox ol li a{line-height: 26px; font-size: 14px;}
+
+
+/* 입력 폼 */
+.inputBox ul{margin-bottom: 30px;}
+.inputBox ul li:not(:last-child){margin-bottom: 30px;}
+.inputBox ul li > label:first-child{font-size: 14px;}
+.inputBox ul li div :is(input, textarea){padding: 16px 12px;}
+.inputBox ul li div input{height: 50px;}
+.inputBox ul li div textarea{height: 200px;}
+.inputBox input[type="checkbox"] + label::before{margin-right: 7px;}
+.inputBox + input[type="submit"]{margin-top: 60px;}
+
+
 /* 서버 페이지 공통 */
 [class*="Page"] > footer{margin-top: 100px;}
 .topBox p:first-of-type{font-size: 28px; line-height: 36px;}
@@ -45,9 +62,11 @@ aside a:not(:last-of-type){border-right: 1px solid rgba(255, 255, 255, 0.3);}
 
 
 /* 해더 */
+body:has(header nav.active){overflow: hidden;}
 header{height: var(--headerHeight);}
 header h1{width: 54px;}
 header nav{display: none; position: fixed; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5);}
+header nav.active{display: block;}
 header nav ul{width: 260px; height: 100%; padding: 140px 30px; margin-left: auto; background-color: white; box-sizing: border-box; position: relative;}
 header nav ul li a{font-size: 20px; line-height: var(--headerHeight); font-weight: 700;}
 header nav ul li:last-child a{position: absolute; left: 50%; bottom: 40px; transform: translateX(-50%);}
