--- a/css/page_pc.css
+++ b/css/page_pc.css
@@ -10,7 +10,7 @@
 .mainPage .fullBox .newsArea ul li b{font-size: 24px; margin-bottom: 15px;}
 .mainPage .fullBox .newsArea ul li time{font-size: 18px;}
 .mainPage .fullBox .newsArea > a{font-size: 18px; width: 203px; line-height: 60px; margin-top: 100px;}
-.mainPage .paginationBox{position: fixed; left: 50px; top: 0; height: 100%; display: flex; flex-direction: column;}
+.mainPage .paginationBox{display: none; position: fixed; left: 50px; top: 0; height: 100%; /* display: flex; */ flex-direction: column;}
 .mainPage .paginationBox button{width: 50px; aspect-ratio: 1;}
 .mainPage .paginationBox button:nth-of-type(1){margin-bottom: 33px;}
 .mainPage .paginationBox button:nth-of-type(2){margin-top: 33px;}
