--- a/css/reset.css
+++ b/css/reset.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 	font-family: 'Pretendard';
+	word-break: keep-all;
 }
 ol, ul {
 	list-style: none;
