--- a/css/global_pc.css
+++ b/css/global_pc.css
@@ -79,7 +79,7 @@ header .iconBox{display: none;}
 
 
 /* 푸터 */
-footer{padding-block: 80px;}
+footer{padding-block: 80px; height: 320px;}
 footer img{max-width: 287px; margin-bottom: 30px;}
 footer address{font-size: 16px; line-height: 26px; max-width: 500px;}
 footer address :is(dl:nth-child(2), dl:nth-child(4))::after{content: '/'; margin-inline: 0.4em;}
