--- a/css/page.css
+++ b/css/page.css
@@ -1,4 +1,5 @@
 /* 메인 */
+.mainPage .fullBox{position: fixed; left: 0; top: 0; width: 100%; --moveValue: 0px; transition: var(--duration) transform cubic-bezier(0.36, 0.4, 0.6, 1.35); transform: translateY(var(--moveValue));}
 .mainPage .fullBox :is(div, section){display: flex; flex-direction: column; align-items: start; height: var(--fullHeight);}
 .mainPage .fullBox div{background-repeat: no-repeat;}
 .mainPage .fullBox div:nth-of-type(1){background-image: url(../images/main-img01.png);}
@@ -16,6 +17,8 @@
 .mainPage .fullBox .newsArea ul li b{font-weight: 700; display: block;}
 .mainPage .fullBox .newsArea ul li time{line-height: 1.2; color: rgba(255, 255, 255, 0.5);}
 .mainPage .fullBox .newsArea > a{align-self: center; font-weight: 500; text-align: center; color: rgba(255, 255, 255, 0.5); background-color: rgba(255, 255, 255, 0.1);}
+.mainPage.white header h1 a{background-image: url(../images/logo-white.png); transition-delay: var(--duration);}
+
 
 
 /* 회사소개 */
