--- a/css/page.css
+++ b/css/page.css
@@ -13,9 +13,11 @@
 .mainPage .fullBox .newsArea{background-color: var(--color-point01); color: white;}
 .mainPage .fullBox .newsArea h2{font-size: 40px; margin-bottom: 50px; font-weight: 700;}
 .mainPage .fullBox .newsArea ul{display: flex; gap: 40px; width: 100%; overflow: auto;}
-.mainPage .fullBox .newsArea ul li{flex: 1; min-width: 280px;}
-.mainPage .fullBox .newsArea ul li b{font-weight: 700; display: block;}
-.mainPage .fullBox .newsArea ul li time{line-height: 1.2; color: rgba(255, 255, 255, 0.5);}
+.mainPage .fullBox .newsArea ul li{min-width: 280px; width: 31.4285%;}
+.mainPage .fullBox .newsArea ul li a{display: block;}
+.mainPage .fullBox .newsArea ul li a img{aspect-ratio: 440 / 248; object-fit: cover;}
+.mainPage .fullBox .newsArea ul li a b{font-weight: 700; display: block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
+.mainPage .fullBox .newsArea ul li a time{line-height: 1.2; color: rgba(255, 255, 255, 0.5);}
 .mainPage .fullBox .newsArea > a{align-self: center; font-weight: 500; text-align: center; color: rgba(255, 255, 255, 0.5); background-color: rgba(255, 255, 255, 0.1);}
 .mainPage.white header h1 a{background-image: url(../images/logo-white.png); transition-delay: var(--duration);}
 
